--- a/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
+++ b/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
@@ -6,7 +6,7 @@
       "name": "Vignesh_Ramakrishnan_Assignment5_ITR.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNB5qSncyTZin+oYZ+OV2tj",
+      "authorship_tag": "ABX9TyPX1bwyMzA1b2tcVuGhD1ZU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -479,6 +479,7 @@
       },
       "source": [
         "#specs\n",
+        "l0=10\n",
         "l1=10\n",
         "l2=10\n",
         "l3=10\n",
@@ -487,11 +488,11 @@
         "m2=10\n",
         "m3=10\n",
         "\n",
-        "il1= m1*(l1**2)/3\n",
-        "il2= m2*(l2**2)/3\n",
-        "il3= m3*(l3**2)/3\n"
+        "i1= m1*(l1**2)/3\n",
+        "i2= m2*(l2**2)/3\n",
+        "i3= m3*(l3**2)/3\n"
       ],
-      "execution_count": 4,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -499,10 +500,9 @@
       "metadata": {
         "id": "7Lr65Kd2Egjt",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb1355ff-1750-47b4-8a34-61c56840e00d"
+        "outputId": "3f3fe06d-62e1-4f4f-f834-096056746fa5"
       },
       "source": [
         "# From Repository code\n",
@@ -529,17 +529,68 @@
         "    z= l1+ l3*np.sin(theta2+theta3) +l2*np.sin(theta2)\n",
         "    return x,y,z\n",
         "\n",
-        "def jacobianPUMA(theta1,theta2,theta3,l1,l2,l3):\n",
-        "    J=[[-l1*np.sin(theta1)-l2*np.sin(theta1+theta2),l1*np.cos(theta1)+l2*np.cos(theta1+theta2),0,0,0,1],[],[]]"
+        "def jacobianPUMA(theta1,theta2,theta3,l0,l1,l2):\n",
+        "    J=[[-l1*np.sin(theta1)*np.cos(theta2),l1*np.cos(theta1)*np.cos(theta2),0,0,0,1],[-l1*np.cos(theta1)*np.sin(theta2),-l1*np.sin(theta1)*np.sin(theta2),0,0,0,1]]\n",
+        "    return J\n",
+        "\n",
+        "def PUMADynamicsCalc(theta1,theta2,theta3,l1,l2,l3):\n",
+        "    q1, q2, q3,q1dot, q1ddot, q2dot, q2ddot, q3dot,q3ddot=sp.symbols(\"q1 q2 q3 q1d q1dd q2d q2dd q3d q3dd\")\n",
+        "    l_hyp=l3*0.5*np.cos(theta3)+l2\n",
+        "    l_hyps=l3*0.5*sp.cos(q3)+l2\n",
+        "    Jvc1,Jvc2,Jvc3=[[0,0,0],[0,0,0],[0,0,0]],[[-0.5*l1*np.sin(theta1)*np.cos(theta2),-0.5*l2*np.sin(theta2)*np.cos(theta1),0],[0.5*l2*np.cos(theta1)*np.cos(theta2), -0.5*l2*np.sin(theta1)*np.sin(theta2), 0],[0,0.5*l2*np.cos(theta2),0]],[[-l_hyp*np.sin(theta1)*np.cos(theta2),-l_hyp*np.cos(theta1)*np.sin(theta2),0.5*l3*np.cos(theta1)*np.cos(theta2)*np.sin(theta3)],[l_hyp*np.cos(theta1)*np.cos(theta2),-l_hyp*np.sin(theta1)*np.sin(theta2),0.5*l3*np.sin(theta1)*np.cos(theta2)*np.sin(theta3)],[0,l2*np.cos(theta2),0.5*l3*np.cos(theta2)]]\n",
+        "    Jvc1s,Jvc2s,Jvc3s=[[0,0,0],[0,0,0],[0,0,0]],[[-l1*sp.sin(q1)*0.5*sp.cos(q2),-0.5*l2*sp.cos(q1)*sp.sin(q2),0],[0.5*l2*sp.cos(q1)*sp.cos(q2), -0.5*l2*sp.sin(q1)*sp.sin(q2), 0],[0,0.5*l2*sp.cos(q2),0]],[[-l_hyps*sp.sin(q1)*sp.cos(q2),-l_hyps*sp.cos(q1)*sp.sin(q2),0.5*l3*sp.cos(q1)*sp.cos(q2)*sp.sin(q3)],[l_hyps*sp.cos(q1)*sp.cos(q2),-l_hyps*sp.sin(q1)*sp.sin(q2),0.5*l3*sp.sin(q1)*sp.cos(q2)*sp.sin(q3)],[0,l2*sp.cos(q2),0.5*l3*sp.cos(q2)]]\n",
+        "    Icom=[[i1+i2+i3,0,0],[0,i2+i3,i3],[0,i3,i3]]\n",
+        "    JtJ1=(np.transpose((Jvc1))@(Jvc1))*m1\n",
+        "    JtJ2=(np.transpose((Jvc2))@(Jvc2))*m2\n",
+        "    JtJ3=(np.transpose((Jvc3))@(Jvc3))*m3\n",
+        "    #Dq\n",
+        "    D=np.add(np.add(np.add(JtJ1,JtJ2),JtJ3),Icom)\n",
+        "    Dqs= (np.transpose((Jvc1s))@(Jvc1s))*m1+(np.transpose((Jvc2s))@(Jvc2s))*m2 +(np.transpose((Jvc3s))@(Jvc3s))*m3\n",
+        "    q=[q1,q2,q3]\n",
+        "    #Christoffel\n",
+        "    C=[[[0,0,0]]*3]*3\n",
+        "    SS=[[[0,0,0]]*3]*3\n",
+        "    for k in range(0,3):\n",
+        "      for j in range(0,3):\n",
+        "        for i in range(0,3):\n",
+        "          C[i][j][k] = 0.5 * (sp.diff(D[k][j], q[i]) + sp.diff(D[k][i], q[j]) - sp.diff(D[i][j], q[k]))\n",
+        "    for k in range(0,3):\n",
+        "      for j in range(0,3):\n",
+        "        for i in range(0,3):\n",
+        "          SS[i][j][k]= sp.diff(Dqs[i][j], q[k])-2*C[i][j][k]\n",
+        "    print(\"SkewSymmetric\")\n",
+        "    print(SS)\n",
+        "    V = (m1*g*0.5*l1)+m2*g*(l1+0.5*l2*sp.sin(q2))+m3*g*(l1+l2*sp.sin(q2)+l3*0.5*sp.sin(q3))\n",
+        "    Phi = [0] * 3\n",
+        "    C_total = 0\n",
+        "    D_total=0\n",
+        "    Tau = [0] * 3\n",
+        "    qdot_arr = np.array([q1dot, q2dot, q3dot])\n",
+        "    qddot_arr = np.array([q1ddot, q2ddot, q3ddot])\n",
+        "    for k in range(3): #corresponds to each link\n",
+        "      Phi[k] = sp.diff(V, q[k])\n",
+        "      for j in range(3):\n",
+        "        D_total = D_total + D[k][j] * qddot_arr[j]\n",
+        "        for i in range(3):\n",
+        "          C_total = C_total + C[i][j][k] * qdot_arr[i] * qdot_arr[j]\n",
+        "      Tau[k] = D_total + C_total + Phi[k]\n",
+        "    print(\"tau\")\n",
+        "\n",
+        "    return sp.simplify(Tau[0]),sp.simplify(Tau[1]),sp.simplify(Tau[2])\n",
+        "print(PUMADynamicsCalc(10,20,5,l0,l1,l2))\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-7012200ba6dd>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SkewSymmetric\n",
+            "[[[0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)], [0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)], [0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)]], [[0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)], [0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)], [0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)]], [[0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)], [0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)], [0, -500.0*sin(q1)**2*sin(q2)*sin(q3)**2*cos(q2) - 500.0*sin(q2)*sin(q3)**2*cos(q1)**2*cos(q2) - 500.0*sin(q2)*cos(q2), 500.0*sin(q1)**2*sin(q3)*cos(q2)**2*cos(q3) + 500.0*sin(q3)*cos(q1)**2*cos(q2)**2*cos(q3)]]]\n",
+            "tau\n",
+            "(1258.75219690933*q1dd - 5.43821847028692e-14*q2dd - 9.79423640908196e-15*q3dd, 1258.75219690933*q1dd + 2169.85642555335*q2dd + 620.560422740314*q3dd + 1471.5*cos(q2), 1258.75219690933*q1dd + 2790.41684829366*q2dd + 1033.80929388176*q3dd + 490.5*cos(q3))\n"
           ]
         }
       ]
