ME639_21310037_Assignment_5 Trying to fix sympy solver code for obtaining qddot as function of generalized forces Qi and not other way round.

--- a/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
+++ b/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
@@ -6,7 +6,7 @@
       "name": "Vignesh_Ramakrishnan_Assignment5_ITR.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPX1bwyMzA1b2tcVuGhD1ZU",
+      "authorship_tag": "ABX9TyPrRwdzSKg/6kX4yEnpJ8RR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,8 +195,6 @@
         "  \n",
         "  print(\"Tau\")    \n",
         "  \n",
-        "\n",
-        "\n",
         "  return sp.simplify(Tau[0]),sp.simplify(Tau[1]),sp.simplify(Tau[2])\n",
         "print(StanfordDynamicsCalc(10,20,5,l1,l2))\n",
         "\n",
@@ -350,6 +348,8 @@
         "def SCARAJacobian(theta1,theta2,d3,l0,l1,l2):\n",
         "    J=[[0,0,1,0,0,0],[0,0,1,l1*(np.sin(theta1)),-l1*(np.cos(theta1)),0],[0,0,1,(l1*np.sin(theta1))+(l2*np.sin(theta1+theta2)),-(l1*np.cos(theta1))-(l2*np.cos(theta1+theta2)),0],[0,0,0,0,0,1]]\n",
         "    return J\n",
+        "\n",
+        "#Post discussion with Suraj\n",
         "def SCARADynamicsCalc(theta1,theta2,d3,l0,l1,l2):\n",
         "    q1, q2, q3,q1dot, q1ddot, q2dot, q2ddot, q3dot,q3ddot=sp.symbols(\"q1 q2 q3 q1d q1dd q2d q2dd q3d q3dd\")\n",
         "    Jvc1,Jvc2,Jvc3=[[-0.5*l1*np.sin(theta1),0,0],[0.5*l1*np.cos(theta1),0,0],[0,0,0]],[[-l1*np.sin(theta1)-0.5*l2*np.sin(theta1+theta2),-0.5*l2*np.sin(theta1+theta2),0],[l1*np.cos(theta1)+0.5*l2*np.cos(theta1+theta2), 0.5*l2*np.cos(theta1+theta2), 0],[0,0,0]],[[-l1*np.sin(theta1)-l2*np.sin(theta1+theta2),-l2*np.sin(theta1+theta2),0],[l1*np.cos(theta1)+l2*np.cos(theta1+theta2),l2*np.cos(theta1+theta2),0],[0,0,-0.5]]\n",
@@ -416,7 +416,7 @@
       "source": [
         "\n",
         "\n",
-        "fig0 = plt.figure(figsize=(5,4))\n",
+        "fig0 = plt.figure(figsize=(5,4,5))\n",
         "ax = fig0.add_subplot(111,autoscale_on=False, xlim=(-(l1+l2), (l1+l2)), ylim=(-(l1+l2), 1.))\n",
         "ax.set_aspect('equal')\n",
         "ax.grid()\n",
@@ -502,7 +502,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f3fe06d-62e1-4f4f-f834-096056746fa5"
+        "outputId": "54a14f17-45be-4bc1-8c06-92f1c4ff3413"
       },
       "source": [
         "# From Repository code\n",
@@ -532,7 +532,7 @@
         "def jacobianPUMA(theta1,theta2,theta3,l0,l1,l2):\n",
         "    J=[[-l1*np.sin(theta1)*np.cos(theta2),l1*np.cos(theta1)*np.cos(theta2),0,0,0,1],[-l1*np.cos(theta1)*np.sin(theta2),-l1*np.sin(theta1)*np.sin(theta2),0,0,0,1]]\n",
         "    return J\n",
-        "\n",
+        "#Post discussion with Suraj\n",
         "def PUMADynamicsCalc(theta1,theta2,theta3,l1,l2,l3):\n",
         "    q1, q2, q3,q1dot, q1ddot, q2dot, q2ddot, q3dot,q3ddot=sp.symbols(\"q1 q2 q3 q1d q1dd q2d q2dd q3d q3dd\")\n",
         "    l_hyp=l3*0.5*np.cos(theta3)+l2\n",
@@ -581,7 +581,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 41,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,6 +612,10 @@
         "  q1dot=state[3]\n",
         "  q2dot=state[4]\n",
         "  q3dot=state[5]\n",
+        "  #we find angular acceleration as function of torques \n",
+        "  \n",
+        "\n",
+        "\n",
         "  dstate[0]=q1dot\n",
         "  dstate[1]=q1ddot\n",
         "  dstate[2]=q2dot\n",
@@ -653,6 +657,48 @@
         "\n",
         "\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V6ymc3FO1V-Q"
+      },
+      "source": [
+        "fig0 = plt.figure(figsize=(5,4,5))\n",
+        "ax = fig0.add_subplot(111,autoscale_on=False, xlim=(-(l1+l2), (l1+l2)), ylim=(-(l1+l2), 1.))\n",
+        "ax.set_aspect('equal')\n",
+        "ax.grid()\n",
+        "\n",
+        "line, = ax.plot([], [], 'o-', lw=2)\n",
+        "trace, = ax.plot([], [], ',-', lw=1)\n",
+        "time_template = 'time = %.1fs'\n",
+        "time_text = ax.text(0.05, 0.9, 's', transform=ax.transAxes)\n",
+        "dt=0.02\n",
+        "framescount=1000\n",
+        "def frameBuild(i):\n",
+        "  robot_pos_x=[0,joint[0,i],joint1[0,i],endeff[0,i]]\n",
+        "  robot_pos_y=[0,joint[1,i],joint1[1,i],endeff[1,i]]\n",
+        "  robot_pos_z=[0,joint[2,i],joint1[2,i],endeff[2,i]]\n",
+        "\n",
+        "  frames_x, frames_y,frames_z = deque(maxlen=framescount), deque(maxlen=framescount), deque(maxlen=framescount)\n",
+        "  if i == 0:\n",
+        "        frames_x.clear()\n",
+        "        frames_y.clear()\n",
+        "        frames_z.clear()\n",
+        "  frames_x.appendleft(robot_pos_x[3])\n",
+        "  frames_y.appendleft(robot_pos_y[3])\n",
+        "  frames_z.appendleft(robot_pos_z[3])\n",
+        "\n",
+        "  line.set_data(robot_pos_x, robot_pos_y,robot_pos_z)\n",
+        "  trace.set_data(frames_x, frames_y, frames_z)\n",
+        "  time_text.set_text(time_template % (i*dt))\n",
+        "  return (line, trace, time_text)\n",
+        "\n",
+        "anim_pos = animation.FuncAnimation(fig0, frameBuild, len(resultangles), interval=dt*1000, blit=True)\n",
+        "HTML(anim_pos.to_html5_video())"
       ],
       "execution_count": null,
       "outputs": []
