--- a/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
+++ b/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
@@ -6,7 +6,7 @@
       "name": "Vignesh_Ramakrishnan_Assignment5_ITR.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrRwdzSKg/6kX4yEnpJ8RR",
+      "authorship_tag": "ABX9TyNUzDrsMd5APWbyMbz5qBUq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,7 +202,8 @@
         "\n",
         "def StanfordAnimate(i):\n",
         "  \n",
-        "  return 0"
+        "  return 0\n",
+        "  "
       ],
       "execution_count": 28,
       "outputs": [
@@ -217,6 +218,39 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r3r2_dyZ3jy6"
+      },
+      "source": [
+        "#states[q1,q2,q3,q1d,q2d,q3d]\n",
+        "def xdotCalcStanford(state,t,tau1,tau2):\n",
+        "  dstate=np.zeros_like(state)\n",
+        "  #angular position states\n",
+        "  q1=state[0]\n",
+        "  q2=state[1]\n",
+        "  q3=state[2]\n",
+        "  #angular velocity states\n",
+        "  q1dot=state[3]\n",
+        "  q2dot=state[4]\n",
+        "  q3dot=state[5]\n",
+        "  #we find angular acceleration as function of torques \n",
+        "  q1ddot\n",
+        "\n",
+        "\n",
+        "  dstate[0]=q1dot\n",
+        "  dstate[1]=q2dot\n",
+        "  dstate[2]=q3dot\n",
+        "  dstate[3]=q1ddot\n",
+        "  dstate[4]=q2ddot\n",
+        "  dstate[5]=q3ddot\n",
+        "\n",
+        "  return dstate.tolist()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -393,6 +427,8 @@
         "    return sp.simplify(Tau[0]),sp.simplify(Tau[1]),sp.simplify(Tau[2])\n",
         "print(SCARADynamicsCalc(10,20,5,l0,l1,l2))\n",
         "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": 32,
@@ -407,6 +443,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uXQTt9Va3czE"
+      },
+      "source": [
+        "#states[q1,q2,q3,q1d,q2d,q3d]\n",
+        "def xdotCalcSCARA(state,t,tau1,tau2):\n",
+        "  dstate=np.zeros_like(state)\n",
+        "  #angular position states\n",
+        "  q1=state[0]\n",
+        "  q2=state[1]\n",
+        "  q3=state[2]\n",
+        "  #angular velocity states\n",
+        "  q1dot=state[3]\n",
+        "  q2dot=state[4]\n",
+        "  q3dot=state[5]\n",
+        "  #we find angular acceleration as function of torques \n",
+        "  \n",
+        "\n",
+        "\n",
+        "  dstate[0]=q1dot\n",
+        "  dstate[1]=q2dot\n",
+        "  dstate[2]=q3dot\n",
+        "  dstate[3]=q1ddot\n",
+        "  dstate[4]=q2ddot\n",
+        "  dstate[5]=q3ddot\n",
+        "  return dstate.tolist()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -602,7 +670,7 @@
       },
       "source": [
         "#states[q1,q2,q3,q1d,q2d,q3d]\n",
-        "def xdotCalc(state,t,tau1,tau2):\n",
+        "def xdotCalcPUMA(state,t,tau1,tau2):\n",
         "  dstate=np.zeros_like(state)\n",
         "  #angular position states\n",
         "  q1=state[0]\n",
@@ -613,13 +681,15 @@
         "  q2dot=state[4]\n",
         "  q3dot=state[5]\n",
         "  #we find angular acceleration as function of torques \n",
-        "  \n",
+        "\n",
         "\n",
         "\n",
         "  dstate[0]=q1dot\n",
-        "  dstate[1]=q1ddot\n",
-        "  dstate[2]=q2dot\n",
-        "  dstate[3]=q2ddot\n",
+        "  dstate[1]=q2dot\n",
+        "  dstate[2]=q3dot\n",
+        "  dstate[3]=q1ddot\n",
+        "  dstate[4]=q2ddot\n",
+        "  dstate[5]=q3ddot\n",
         "  return dstate.tolist()"
       ],
       "execution_count": null,
