--- a/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
+++ b/Vignesh_Ramakrishnan_Assignment5_ITR.ipynb
@@ -6,7 +6,7 @@
       "name": "Vignesh_Ramakrishnan_Assignment5_ITR.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUzDrsMd5APWbyMbz5qBUq",
+      "authorship_tag": "ABX9TyPCdyLZQtdgQzFptMiazV0n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,7 +237,9 @@
         "  q2dot=state[4]\n",
         "  q3dot=state[5]\n",
         "  #we find angular acceleration as function of torques \n",
-        "  q1ddot\n",
+        "  q1ddot=sp.solve(StanfordDynamicsCalc(q1,q2,q3,l1,l2),q1ddot)\n",
+        "  q2ddot=sp.solve(StanfordDynamicsCalc(q1,q2,q3,l1,l2),q1ddot)\n",
+        "  \n",
         "\n",
         "\n",
         "  dstate[0]=q1dot\n",
@@ -249,17 +251,27 @@
         "\n",
         "  return dstate.tolist()"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aA0IlzNPFuaJ"
+        "id": "aA0IlzNPFuaJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 265
+        },
+        "outputId": "4992bff4-4a86-4387-bb20-f77974c0de36"
       },
       "source": [
         "#Animation code from miniproject\n",
+        "dt=0.02\n",
+        "tmax=10\n",
+        "t=np.linspace(0,dt,tmax)\n",
         "\n",
+        "state=StanfordInverseKinematics([1,0,1],2,2)\n",
+        "resultangles_forcecontrol=integrate.odeint(xdotCalcStanford, state, t,args=(tau1,tau2))\n",
         "\n",
         "fig0 = plt.figure(figsize=(5,4))\n",
         "ax = fig0.add_subplot(111,autoscale_on=False, xlim=(-(l1+l2), (l1+l2)), ylim=(-(l1+l2), 1.))\n",
@@ -294,8 +306,28 @@
         "anim_pos = animation.FuncAnimation(fig0, frameBuild, len(resultangles), interval=dt*1000, blit=True)\n",
         "HTML(anim_pos.to_html5_video())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in sqrt\n",
+            "  if __name__ == '__main__':\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-45-d5247a85c7de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mStanfordInverseKinematics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mresultangles_forcecontrol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mintegrate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0modeint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxdotCalcStanford\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtau1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtau2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mfig0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tau1' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -462,6 +494,7 @@
         "  q2dot=state[4]\n",
         "  q3dot=state[5]\n",
         "  #we find angular acceleration as function of torques \n",
+        "  q1ddot=sp.solver(SCARADynamicsCalc(q1,q2,d3,l0,l1,l2),q1dd,implicit=true)\n",
         "  \n",
         "\n",
         "\n",
